--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=TechSupBot
+
+bot.name=${BOT_NAME}
+bot.token=${BOT_TOKEN}
+bot.url=${BOT_URL}
+server.port=${PORT_DISPATCHER:8084}
