--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TechSupBot
 
 bot.token=${BOT_TOKEN}
-server.port=${PORT_DISPATCHER:8084}
+server.port=${PORT_TECH_SUPP:8090}
 
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USERNAME}
