--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=TechSupBot
 bot.token=${BOT_TOKEN}
 server.port=${PORT_TECH_SUPP:8090}
 
+google.CREDENTIALS_FILE_PATH=${CREDENTIALS_FILE_PATH:/credential.json}
+google.spreadsheet_id=${SPREADSHEET_ID}
+
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
