--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=TechSupBot
 
 bot.token=${BOT_TOKEN}
+bot.url=${BOT_URL}
 server.port=${PORT_TECH_SUPP:8090}
 
 google.CREDENTIALS_FILE_PATH=${CREDENTIALS_FILE_PATH:/credential.json}
