--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=TechSupBot
 
-bot.token=${BOT_TOKEN}
-bot.url=${BOT_URL}
-server.port=${PORT_TECH_SUPP:8090}
+bot.token=${TECH_BOT_TOKEN}
+bot.url=${TECH_BOT_URL}
+server.port=${TECH_PORT_TECH_SUPP:8090}
 
-google.CREDENTIALS_FILE_PATH=${CREDENTIALS_FILE_PATH:/credential.json}
-google.spreadsheet_id=${SPREADSHEET_ID}
+google.CREDENTIALS_FILE_PATH=${TECH_CREDENTIALS_FILE_PATH:/credential.json}
+google.spreadsheet_id=${TECH_SPREADSHEET_ID}
 
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=${DATASOURCE_DRIVER_NAME}
+spring.datasource.url=${TECH_DATASOURCE_URL}
+spring.datasource.username=${TECH_DATASOURCE_USERNAME}
+spring.datasource.password=${TECH_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=${TECH_DATASOURCE_DRIVER_NAME}
 
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
