--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=TechSupBot
 
 bot.token=${TECH_BOT_TOKEN}
 bot.url=${TECH_BOT_URL}
+bot.manager_id=${TECH_MANAGER_ID}
 server.port=${TECH_PORT_TECH_SUPP:8090}
 
 google.CREDENTIALS_FILE_PATH=${TECH_CREDENTIALS_FILE_PATH:/credential.json}
