--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ bot.manager_id=${TECH_MANAGER_ID}
 bot.alexander_id=${TECH_ALEXANDR_ID}
 server.port=${TECH_PORT_TECH_SUPP:8090}
 
+redis.host=${TECH_REDIS_HOST}
+redis.port=${TECH_REDIS_PORT:6379}
+
 google.CREDENTIALS_FILE_PATH=${TECH_CREDENTIALS_FILE_PATH:/credential.json}
 google.spreadsheet_id=${TECH_SPREADSHEET_ID}
 
