--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ bot.token=${TECH_BOT_TOKEN}
 bot.url=${TECH_BOT_URL}
 bot.manager_id=${TECH_MANAGER_ID}
 bot.alexander_id=${TECH_ALEXANDR_ID}
+bot.promo=${TECH_PROMO}
 server.port=${TECH_PORT_TECH_SUPP:8090}
 
 
